force-app/main/default/objects/gateBServerModules__c/gateBServerModules__c.object-meta.xml
<CustomObject>
    <label>gateB Server Module</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gateB Server Modules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>