force-app/main/default/objects/gateBServerModules__c/fields/moduleDescription__c.field-meta.xml
<CustomField>
    <fullName>moduleDescription__c</fullName>
    <label>Module Beschreibung</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>