force-app/main/default/objects/gateBServerModules__c/fields/moduleType__c.field-meta.xml
<CustomField>
    <fullName>moduleType__c</fullName>
    <label>Module Typ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>