force-app/main/default/objects/gateBServerModules__c/fields/moduleVersion__c.field-meta.xml
<CustomField>
    <fullName>moduleVersion__c</fullName>
    <label>Module Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>