force-app/main/default/objects/gateBServerModules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>moduleDescription__c</columns>
    <columns>moduleType__c</columns>
    <columns>moduleVersion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>